pkgs/dartcv_core/src/core.h

bool Mat_IsContinuous(Mat m);
bool Mat_IsSubmatrix(Mat m);
CvStatus *Mat_LocateROI(Mat m, Size *wholeSize, Point *ofs);
CvStatus *Mat_Mean(Mat m, Scalar *rval);
CvStatus *Mat_MeanWithMask(Mat m, Mat mask, Scalar *rval);
Vec4s *Mat_GetVec4s(Mat m, int row, int col);
Vec4w *Mat_GetVec4w(Mat m, int row, int col);
Vec4i *Mat_GetVec4i(Mat m, int row, int col);
Vec6i *Mat_GetVec6i(Mat m, int row, int col);
Vec8i *Mat_GetVec8i(Mat m, int row, int col);
Vec4f *Mat_GetVec4f(Mat m, int row, int col);
Vec6f *Mat_GetVec6f(Mat m, int row, int col);
Vec6d *Mat_GetVec6d(Mat m, int row, int col);
CvStatus *Mat_Hconcat(Mat src1, Mat src2, Mat dst);
CvStatus *Mat_Idct(Mat src, Mat dst, int flags);
CvStatus *Mat_Idft(Mat src, Mat dst, int flags, int nonzeroRows);
CvStatus *Mat_InRange(Mat src, Mat lowerb, Mat upperb, Mat dst);
CvStatus *Mat_InRangeWithScalar(Mat src, const Scalar lowerb, const Scalar upperb, Mat dst);
CvStatus *Mat_InsertChannel(Mat src, Mat dst, int coi);
CvStatus *Mat_Invert(Mat src, Mat dst, int flags, double *rval);
CvStatus *Mat_Log(Mat src, Mat dst);
CvStatus *Mat_Magnitude(Mat x, Mat y, Mat magnitude);
CvStatus *Mat_Max(Mat src1, Mat src2, Mat dst);
CvStatus *Mat_MeanStdDev(Mat src, Scalar *dstMean, Scalar *dstStdDev);
CvStatus *Mat_MeanStdDevWithMask(Mat src, Scalar *dstMean, Scalar *dstStdDev, Mat mask);
CvStatus *Mat_Merge(VecMat mats, Mat *dst);
CvStatus *Mat_Min(Mat src1, Mat src2, Mat dst);