pkgs/dartcv_core/lib/src/g/core.g.dart


  late final _Mat_GetVec4fPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec4f> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec4f');
  late final _Mat_GetVec4f =
      _Mat_GetVec4fPtr.asFunction<ffi.Pointer<Vec4f> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec4i> Mat_GetVec4i(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec4i(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec4iPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec4i> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec4i');
  late final _Mat_GetVec4i =
      _Mat_GetVec4iPtr.asFunction<ffi.Pointer<Vec4i> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec4s> Mat_GetVec4s(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec4s(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec4sPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec4s> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec4s');
  late final _Mat_GetVec4s =
      _Mat_GetVec4sPtr.asFunction<ffi.Pointer<Vec4s> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec4w> Mat_GetVec4w(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec4w(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec4wPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec4w> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec4w');
  late final _Mat_GetVec4w =
      _Mat_GetVec4wPtr.asFunction<ffi.Pointer<Vec4w> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec6d> Mat_GetVec6d(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec6d(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec6dPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec6d> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec6d');
  late final _Mat_GetVec6d =
      _Mat_GetVec6dPtr.asFunction<ffi.Pointer<Vec6d> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec6f> Mat_GetVec6f(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec6f(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec6fPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec6f> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec6f');
  late final _Mat_GetVec6f =
      _Mat_GetVec6fPtr.asFunction<ffi.Pointer<Vec6f> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec6i> Mat_GetVec6i(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec6i(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec6iPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec6i> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec6i');
  late final _Mat_GetVec6i =
      _Mat_GetVec6iPtr.asFunction<ffi.Pointer<Vec6i> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec8i> Mat_GetVec8i(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec8i(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec8iPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec8i> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec8i');
  late final _Mat_GetVec8i =
      _Mat_GetVec8iPtr.asFunction<ffi.Pointer<Vec8i> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<CvStatus> Mat_Hconcat(
    Mat src1,
    Mat src2,
    Mat dst,
  ) {
    return _Mat_Hconcat(
      src1,
      src2,
      dst,
    );
  }

  late final _Mat_HconcatPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>>(
      'Mat_Hconcat');
  late final _Mat_Hconcat = _Mat_HconcatPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_Idct(
    Mat src,
    Mat dst,
    int flags,
  ) {
    return _Mat_Idct(
      src,
      dst,
      flags,
    );
  }

  late final _Mat_IdctPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>>('Mat_Idct');
  late final _Mat_Idct =
      _Mat_IdctPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, int)>();

  ffi.Pointer<CvStatus> Mat_Idft(
    Mat src,
    Mat dst,
    int flags,
    int nonzeroRows,
  ) {
    return _Mat_Idft(
      src,
      dst,
      flags,
      nonzeroRows,
    );
  }

  late final _Mat_IdftPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Int, ffi.Int)>>('Mat_Idft');
  late final _Mat_Idft = _Mat_IdftPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int, int)>();

  ffi.Pointer<CvStatus> Mat_InRange(
    Mat src,
    Mat lowerb,
    Mat upperb,
    Mat dst,
  ) {
    return _Mat_InRange(
      src,
      lowerb,
      upperb,
      dst,
    );
  }

  late final _Mat_InRangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat)>>('Mat_InRange');
  late final _Mat_InRange = _Mat_InRangePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_InRangeWithScalar(
    Mat src,
    Scalar lowerb,
    Scalar upperb,
    Mat dst,
  ) {
    return _Mat_InRangeWithScalar(
      src,
      lowerb,
      upperb,
      dst,
    );
  }

  late final _Mat_InRangeWithScalarPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Scalar, Scalar, Mat)>>('Mat_InRangeWithScalar');
  late final _Mat_InRangeWithScalar = _Mat_InRangeWithScalarPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Scalar, Scalar, Mat)>();

  ffi.Pointer<CvStatus> Mat_InsertChannel(
    Mat src,
    Mat dst,
    int coi,
  ) {
    return _Mat_InsertChannel(
      src,
      dst,
      coi,
    );
  }

  late final _Mat_InsertChannelPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>>(
      'Mat_InsertChannel');
  late final _Mat_InsertChannel = _Mat_InsertChannelPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int)>();

  ffi.Pointer<CvStatus> Mat_Invert(
    Mat src,
    Mat dst,
    int flags,
    ffi.Pointer<ffi.Double> rval,
  ) {
    return _Mat_Invert(
      src,
      dst,
      flags,
      rval,
    );
  }

  late final _Mat_InvertPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Int, ffi.Pointer<ffi.Double>)>>('Mat_Invert');
  late final _Mat_Invert = _Mat_InvertPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int, ffi.Pointer<ffi.Double>)>();

  bool Mat_IsContinuous(
    Mat m,
  ) {
    return _Mat_IsContinuous(
      m,
    );
  }

  late final _Mat_IsContinuousPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(Mat)>>('Mat_IsContinuous');
  late final _Mat_IsContinuous =
      _Mat_IsContinuousPtr.asFunction<bool Function(Mat)>(isLeaf: true);

  bool Mat_IsSubmatrix(
    Mat m,
  ) {
    return _Mat_IsSubmatrix(
      m,
    );
  }

  late final _Mat_IsSubmatrixPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(Mat)>>('Mat_IsSubmatrix');
  late final _Mat_IsSubmatrix =
      _Mat_IsSubmatrixPtr.asFunction<bool Function(Mat)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_LocateROI(
    Mat m,
    ffi.Pointer<Size> wholeSize,
    ffi.Pointer<Point> ofs,
  ) {
    return _Mat_LocateROI(
      m,
      wholeSize,
      ofs,
    );
  }

  late final _Mat_LocateROIPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Pointer<Size>, ffi.Pointer<Point>)>>('Mat_LocateROI');
  late final _Mat_LocateROI = _Mat_LocateROIPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, ffi.Pointer<Size>, ffi.Pointer<Point>)>();

  ffi.Pointer<CvStatus> Mat_Log(
    Mat src,
    Mat dst,
  ) {
    return _Mat_Log(
      src,
      dst,
    );
  }

  late final _Mat_LogPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'Mat_Log');
  late final _Mat_Log =
      _Mat_LogPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_Magnitude(
    Mat x,
    Mat y,
    Mat magnitude,
  ) {
    return _Mat_Magnitude(
      x,
      y,
      magnitude,
    );
  }

  late final _Mat_MagnitudePtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>>(
      'Mat_Magnitude');
  late final _Mat_Magnitude = _Mat_MagnitudePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_Max(
    Mat src1,
    Mat src2,
    Mat dst,
  ) {
    return _Mat_Max(
      src1,
      src2,
      dst,
    );
  }

  late final _Mat_MaxPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>>(
      'Mat_Max');
  late final _Mat_Max =
      _Mat_MaxPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_Mean(
    Mat m,
    ffi.Pointer<Scalar> rval,
  ) {
    return _Mat_Mean(
      m,
      rval,
    );
  }

  late final _Mat_MeanPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Pointer<Scalar>)>>('Mat_Mean');
  late final _Mat_Mean = _Mat_MeanPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<Scalar>)>();

  ffi.Pointer<CvStatus> Mat_MeanStdDev(
    Mat src,
    ffi.Pointer<Scalar> dstMean,
    ffi.Pointer<Scalar> dstStdDev,
  ) {
    return _Mat_MeanStdDev(
      src,
      dstMean,
      dstStdDev,
    );
  }

  late final _Mat_MeanStdDevPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<Scalar>,
              ffi.Pointer<Scalar>)>>('Mat_MeanStdDev');
  late final _Mat_MeanStdDev = _Mat_MeanStdDevPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, ffi.Pointer<Scalar>, ffi.Pointer<Scalar>)>();

  ffi.Pointer<CvStatus> Mat_MeanStdDevWithMask(
    Mat src,
    ffi.Pointer<Scalar> dstMean,
    ffi.Pointer<Scalar> dstStdDev,
    Mat mask,
  ) {
    return _Mat_MeanStdDevWithMask(
      src,
      dstMean,
      dstStdDev,
      mask,
    );
  }

  late final _Mat_MeanStdDevWithMaskPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<Scalar>,
              ffi.Pointer<Scalar>, Mat)>>('Mat_MeanStdDevWithMask');
  late final _Mat_MeanStdDevWithMask = _Mat_MeanStdDevWithMaskPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, ffi.Pointer<Scalar>, ffi.Pointer<Scalar>, Mat)>();

  ffi.Pointer<CvStatus> Mat_MeanWithMask(
    Mat m,
    Mat mask,
    ffi.Pointer<Scalar> rval,
  ) {
    return _Mat_MeanWithMask(
      m,
      mask,
      rval,
    );
  }

  late final _Mat_MeanWithMaskPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Pointer<Scalar>)>>('Mat_MeanWithMask');
  late final _Mat_MeanWithMask = _Mat_MeanWithMaskPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Pointer<Scalar>)>();

  ffi.Pointer<CvStatus> Mat_Merge(
    VecMat mats,
    ffi.Pointer<Mat> dst,
  ) {
    return _Mat_Merge(
      mats,
      dst,
    );
  }

  late final _Mat_MergePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecMat, ffi.Pointer<Mat>)>>('Mat_Merge');
  late final _Mat_Merge = _Mat_MergePtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecMat, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_Min(
    Mat src1,
    Mat src2,
    Mat dst,
  ) {
    return _Mat_Min(
      src1,
      src2,
      dst,
    );
  }

  late final _Mat_MinPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>>(
      'Mat_Min');
  late final _Mat_Min =
      _Mat_MinPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>();
